added style and options

--- a/index.html
+++ b/index.html
@@ -2,11 +2,55 @@
 <html>
 <head>
 	<title>Sandwich Maker!!</title>
-	<rel="stylesheet" type="css/text" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<div class="container">
+<form>
+<fieldset>
+<legend>Bread</legend>
+<label><input type="radio" name="sourdough" value="sourdough">Sourdough</label></br>
+<label><input type="radio" name="multigrain" value="multigrain">Multigrain</label></br>
+<label><input type="radio" name="rye" value="rye">Rye</label></br>
+</fieldset>
 
+<fieldset>
+<legend>Meat</legend>
+	<label><input type="checkbox" name="turkey" value="turkey">Turkey</label></br>
+	<label><input type="checkbox" name="chicken" value="chicken">Chicken</label></br>
+	<label><input type="checkbox" name="salami" value="salami">Salami</label></br>
+	<label><input type="checkbox" name="bologna" value="bologna">Bologna</label></br>
+</fieldset>
 
+<fieldset>
+<legend>Cheese</legend>
+	<label><input type="checkbox" name="cheddar" value="cheddar">Cheddar</label></br>
+	<label><input type="checkbox" name="swiss" value="swiss">Swiss</label></br>
+	<label><input type="checkbox" name="blue" value="blue">Blue</label></br>
+</fieldset>
+
+<fieldset>
+<legend>Condiments</legend>
+	<label><input type="checkbox" name="miso" value="miso">Miso</label></br>
+	<label><input type="checkbox" name="humms" value="hummus">Hummus</label></br>
+	<label><input type="checkbox" name="mayo" value="mayo">Mayo</label></br>
+	<label><input type="checkbox" name="ranch" value="ranch">Ranch</label></br>
+	<label><input type="checkbox" name="sriracha" value="sriracha">Sriracha</label></br>
+	<label><input type="checkbox" name="mustard" value="mustard">Mustard</label></br>
+</fieldset>
+
+<fieldset>
+<legend>Veggies</legend>
+	<label><input type="checkbox" name="tomato" value="tomato">Tomato</label></br>
+	<label><input type="checkbox" name="spinach" value="spinach">Spinach</label></br>
+	<label><input type="checkbox" name="onion" value="onion">Onion</label></br>
+	<label><input type="checkbox" name="olives" value="olives">Olives</label></br>
+	<label><input type="checkbox" name="cucumber" value="cucumber">Cucumber</label></br>
+	<label><input type="checkbox" name="avocado" value="avocado">Avocado</label></br>
+</fieldset>
+
+</form>
+</div>
 <script src="/javascripts/SandwichMaker.js" type="text/javascript"></script>
 <script src="/javascripts/bread.js" type="text/javascript"></script>
 <script src="/javascripts/meat.js" type="text/javascript"></script>
