structured objects in js files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-<form>
+	<form>
 <fieldset>
 <legend>Bread</legend>
 <label><input type="radio" name="sourdough" value="sourdough">Sourdough</label></br>
@@ -49,8 +49,12 @@
 	<label><input type="checkbox" name="avocado" value="avocado">Avocado</label></br>
 </fieldset>
 
+<button id="sandy">Submit Sandy</button>
+
+<div id="myOrder" class="window"></div>
 </form>
 </div>
+
 <script src="/javascripts/SandwichMaker.js" type="text/javascript"></script>
 <script src="/javascripts/bread.js" type="text/javascript"></script>
 <script src="/javascripts/meat.js" type="text/javascript"></script>
