--- a/index.html
+++ b/index.html
@@ -7,46 +7,46 @@
 <body>
 <div class="container">
 	<form>
-<fieldset>
+<fieldset id="bread-chooser">
 <legend>Bread</legend>
-<label><input type="radio" name="sourdough" value="sourdough">Sourdough</label></br>
-<label><input type="radio" name="multigrain" value="multigrain">Multigrain</label></br>
-<label><input type="radio" name="rye" value="rye">Rye</label></br>
+<label><input type="radio" name="bread" value="sourdough">Sourdough</label></br>
+<label><input type="radio" name="bread" value="multigrain">Multigrain</label></br>
+<label><input type="radio" name="bread" value="rye">Rye</label></br>
 </fieldset>
 
-<fieldset>
+<fieldset id="meat-chooser">
 <legend>Meat</legend>
-	<label><input type="checkbox" name="turkey" value="turkey">Turkey</label></br>
-	<label><input type="checkbox" name="chicken" value="chicken">Chicken</label></br>
-	<label><input type="checkbox" name="salami" value="salami">Salami</label></br>
-	<label><input type="checkbox" name="bologna" value="bologna">Bologna</label></br>
+	<label><input type="checkbox" name="meat" value="turkey">Turkey</label></br>
+	<label><input type="checkbox" name="meat" value="chicken">Chicken</label></br>
+	<label><input type="checkbox" name="meat" value="salami">Salami</label></br>
+	<label><input type="checkbox" name="meat" value="bologna">Bologna</label></br>
 </fieldset>
 
-<fieldset>
+<fieldset id="cheese-chooser">
 <legend>Cheese</legend>
-	<label><input type="checkbox" name="cheddar" value="cheddar">Cheddar</label></br>
-	<label><input type="checkbox" name="swiss" value="swiss">Swiss</label></br>
-	<label><input type="checkbox" name="blue" value="blue">Blue</label></br>
+	<label><input type="checkbox" name="cheese" value="cheddar">Cheddar</label></br>
+	<label><input type="checkbox" name="cheese" value="swiss">Swiss</label></br>
+	<label><input type="checkbox" name="cheese" value="blue">Blue</label></br>
 </fieldset>
 
-<fieldset>
+<fieldset id="condiments-chooser">
 <legend>Condiments</legend>
-	<label><input type="checkbox" name="miso" value="miso">Miso</label></br>
-	<label><input type="checkbox" name="humms" value="hummus">Hummus</label></br>
-	<label><input type="checkbox" name="mayo" value="mayo">Mayo</label></br>
-	<label><input type="checkbox" name="ranch" value="ranch">Ranch</label></br>
-	<label><input type="checkbox" name="sriracha" value="sriracha">Sriracha</label></br>
-	<label><input type="checkbox" name="mustard" value="mustard">Mustard</label></br>
+	<label><input type="checkbox" name="condiments" value="miso">Miso</label></br>
+	<label><input type="checkbox" name="condiments" value="hummus">Hummus</label></br>
+	<label><input type="checkbox" name="condiments" value="mayo">Mayo</label></br>
+	<label><input type="checkbox" name="condiments" value="ranch">Ranch</label></br>
+	<label><input type="checkbox" name="condiments" value="sriracha">Sriracha</label></br>
+	<label><input type="checkbox" name="condiments" value="mustard">Mustard</label></br>
 </fieldset>
 
-<fieldset>
+<fieldset id="veggies-chooser">
 <legend>Veggies</legend>
-	<label><input type="checkbox" name="tomato" value="tomato">Tomato</label></br>
-	<label><input type="checkbox" name="spinach" value="spinach">Spinach</label></br>
-	<label><input type="checkbox" name="onion" value="onion">Onion</label></br>
-	<label><input type="checkbox" name="olives" value="olives">Olives</label></br>
-	<label><input type="checkbox" name="cucumber" value="cucumber">Cucumber</label></br>
-	<label><input type="checkbox" name="avocado" value="avocado">Avocado</label></br>
+	<label><input type="checkbox" name="veggies" value="tomato">Tomato</label></br>
+	<label><input type="checkbox" name="veggies" value="spinach">Spinach</label></br>
+	<label><input type="checkbox" name="veggies" value="onion">Onion</label></br>
+	<label><input type="checkbox" name="veggies" value="olives">Olives</label></br>
+	<label><input type="checkbox" name="veggies" value="cucumber">Cucumber</label></br>
+	<label><input type="checkbox" name="veggies" value="avocado">Avocado</label></br>
 </fieldset>
 
 <button id="sandy">Submit Sandy</button>
@@ -56,6 +56,7 @@
 </div>
 
 <script src="/javascripts/SandwichMaker.js" type="text/javascript"></script>
+<script src="/javascripts/DOMHandler.js" type="text/javascript"></script>
 <script src="/javascripts/bread.js" type="text/javascript"></script>
 <script src="/javascripts/meat.js" type="text/javascript"></script>
 <script src="/javascripts/cheese.js" type="text/javascript"></script>
