--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<form>
 <fieldset id="bread-chooser">
 <legend>Bread</legend>
-<label><input type="radio" name="bread" value="sourdough">Sourdough</label></br>
-<label><input type="radio" name="bread" value="multigrain">Multigrain</label></br>
-<label><input type="radio" name="bread" value="rye">Rye</label></br>
+<label><input type="checkbox" name="bread" value="sourdough">Sourdough</label></br>
+<label><input type="checkbox" name="bread" value="multigrain">Multigrain</label></br>
+<label><input type="checkbox" name="bread" value="rye">Rye</label></br>
 </fieldset>
 
 <fieldset id="meat-chooser">
@@ -48,19 +48,19 @@
 	<label><input type="checkbox" name="veggies" value="cucumber">Cucumber</label></br>
 	<label><input type="checkbox" name="veggies" value="avocado">Avocado</label></br>
 </fieldset>
-
-<button id="sandy">Submit Sandy</button>
-
-<div id="myOrder" class="window"></div>
 </form>
 </div>
+<div id="myOrder" class="window"></div>
+<button id="sandy">Submit Sandy</button>
+
 
 <script src="/javascripts/SandwichMaker.js" type="text/javascript"></script>
-<script src="/javascripts/DOMHandler.js" type="text/javascript"></script>
 <script src="/javascripts/bread.js" type="text/javascript"></script>
 <script src="/javascripts/meat.js" type="text/javascript"></script>
 <script src="/javascripts/cheese.js" type="text/javascript"></script>
 <script src="/javascripts/condiments.js" type="text/javascript"></script>
 <script src="/javascripts/veggies.js" type="text/javascript"></script>
+<script src="/javascripts/DOMHandler.js" type="text/javascript"></script>
+
 </body>
 </html>
