--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
 </fieldset>
 </form>
 </div>
-<div id="myOrder" class="window"></div>
-<button id="sandy">Submit Sandy</button>
+
+<div class="container">
+<div class="order" id="myOrder" class="window"></div>
+<br><button id="sandy">Submit Sandy</button>
+</div>
+
 
 
 <script src="/javascripts/SandwichMaker.js" type="text/javascript"></script>
